# datamatrix-reader

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: tests.yml
bench/: harness.py
corpus/barber/: labels.csv
dmtxslide/: LICENSE  README.md  pyproject.toml
dmtxslide/bench/: harness.py  report.py
dmtxslide/corpus/: labels.csv
dmtxslide/docs/superpowers/plans/: 2026-06-08-ink-thickening-cascade.md  2026-06-08-reanchor-zxing-retire-libdmtx.md  2026-06-09-grid-reconstruction-decoder.md
dmtxslide/docs/superpowers/specs/: 2026-06-07-wsi-ground-truth-gui-design.md  2026-06-08-ink-thickening-cascade-design.md  2026-06-08-reanchor-zxing-retire-libdmtx-design.md  2026-06-09-grid-reconstruction-decoder-design.md
dmtxslide/experiments/libdmtx/: README.md  binding.py
dmtxslide/src/datamatrix_reader/: detect.py
dmtxslide/src/dmtxslide/: _build_dmtx.py  adapt.py  cascade.py  localize.py  locate.py  preprocess.py  reader.py  register.py  synth.py  validate.py
dmtxslide/tests/: test_compare_corpus.py  test_defect_classify.py  test_harness.py  test_label_gt.py  test_locate.py  test_preprocess.py  test_reader.py  test_register.py  test_synth.py
dmtxslide/tools/: add_real_to_dataset.py  auto_register.py  compare_backends.py  compare_yolo.py  defect_classify.py  dump_synth_samples.py  eval_dynamsoft.py  eval_manual_fix.py  eval_yolo.py  export_yolo.py  import_barber.py  label_gt.py  make_yolo_dataset.py  paint_l.py  roi_pitch_experiment.py  smoke_install.py  stamp_align.py  train_yolo.py  validate_full.py  validate_pathology.py  validate_read_all.py  validate_synth.py  viz_search.py
docs/superpowers/plans/: 2026-06-07-wsi-ground-truth-gui.md  2026-06-08-ink-thickening-cascade.md  2026-06-08-reanchor-zxing-retire-libdmtx.md  2026-06-09-barcode-repair-generalization.md  2026-06-09-grid-reconstruction-decoder.md
docs/superpowers/specs/: 2026-06-01-localize-quiet-zone-scrub-design.md  2026-06-07-wsi-ground-truth-gui-design.md  2026-06-08-ink-thickening-cascade-design.md  2026-06-08-reanchor-zxing-retire-libdmtx-design.md  2026-06-09-barcode-repair-generalization-design.md  2026-06-09-grid-reconstruction-decoder-design.md
src/datamatrix_reader/: detect.py  preprocess.py
tests/: test_label_gt.py  test_preprocess.py  test_register.py  test_synth.py
tools/: add_real_to_dataset.py  compare_yolo.py  eval_dynamsoft.py  eval_manual_fix.py  label_gt.py  make_yolo_dataset.py  smoke_install.py  stamp_align.py  validate_full.py
