[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "datamatrix-reader"
version = "0.0.1"
description = "Robust DataMatrix reader for pathology slide labels (zxing-cpp core + YOLO detector + finder-pattern repair)"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "datamatrix", "barcode", "barcode-reader", "2d-barcode", "decoder", "zxing",
    "pathology", "digital-pathology", "whole-slide-imaging", "wsi", "slide-labels",
    "computer-vision", "opencv", "yolo", "onnx", "medical-imaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "zxing-cpp>=2.0",
    # The YOLO detector is the core localizer, run via ONNX Runtime (torch-free, lean).
    # Kept a core dep so a default install gets the real detector, not the weaker classical
    # fallback. The Reader still falls back gracefully if it's somehow unavailable.
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
# GUI experiment tools (tools/paint_l.py manual finder-repair editor). Not needed
# by the reader. Install: pip install -e ".[tools]"
tools = ["pillow>=10"]
# Back-compat alias: the detector runtime is now a core dependency, so [yolo] is a no-op.
yolo = []
# Training/exporting the detector (dev-time only; heavy). Not a runtime dependency.
yolo-train = ["ultralytics>=8.3"]
# Test runner (CI + local). Install: pip install -e ".[test]"
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

# Ship the YOLO detector weights inside the wheel (12MB). Without this, an installed
# copy has no model and the Reader silently falls back to the classical proposer.
[tool.setuptools.package-data]
datamatrix_reader = ["models/*.onnx"]

[tool.pytest.ini_options]
# Some tests import the repo-root tools/ and bench/ packages; put the root on sys.path so
# the `pytest` console script (how CI runs it) resolves them, not just `python -m pytest`.
pythonpath = ["."]
